yamlmanifest/Lab5/ingresslab.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingressapp-demo
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mainpage
  name: ingressdemoapp-main
  namespace: ingressapp-demo
spec:
  volumes:
  - name: nginx-index-file
    configMap:
      name: index-html-main  
  containers:
  - image: nginx
    name: ingressdemoapp-main
    volumeMounts:
    - name: nginx-index-file
      mountPath: /usr/share/nginx/html/
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: docpage
  name: ingressdemoapp-doc
  namespace: ingressapp-demo
spec:
  volumes:
  - name: nginx-index-file
    configMap:
      name: index-html-doc  
  containers:
  - image: nginx
    name: ingressdemoapp-doc
    volumeMounts:
    - name: nginx-index-file
      mountPath: /usr/share/nginx/html/
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docpage
  name: docpage-svc
  namespace: ingressapp-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: docpage
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rootpage
  name: mainpage-svc
  namespace: ingressapp-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mainpage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  namespace: ingressapp-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /main(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mainpage-svc
            port: 
              number: 80
      - path: /doc(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: docpage-svc
            port: 
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: mainpage-svc
            port:
              number: 80
